Refactor Firebase handling, compare a user's score with others

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -79,13 +79,14 @@
     <string name="drivingActivity_averageRating_outOf">(out of</string>
     <string name="drivingActivity_averageRating_ratings"> ratings)</string>
     <string name="drivingActivity_slowDown">Slow Down!</string>
-
-
     <string name="drivingActivity_ratingBad">BAD</string>
     <string name="drivingActivity_ratingGood">GOOD</string>
     <string name="drivingActivity_ratingMedium">MEDIUM</string>
-
+    <string name="drivingActivity_drivingBetterThan">You\'re driving better than\u0020</string>
+    <string name="drivingActivity_percentOfUsersOnRoad">% of all users on this road</string>
     <string name="drivingActivity_keepDriving">KEEP DRIVING</string>
+    <string name="drivingActivity_firstUserOnRoad">You\'re the first user driving on this road</string>
+    <string name="drivingActivity_noInternetConnection">No internet connection</string>
     <string name="journeyDetails_globalScore">Journey score:</string>
     <string name="historyItem_score">Score:</string>
     <string name="journeyDetails_viewInsightsButton">View Insights</string>
