--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
     <string name="drivingActivity_percentOfUsersOnRoad">% of all users on this road</string>
     <string name="drivingActivity_firstUserOnRoad">You\'re the first user driving on this road</string>
     <string name="drivingActivity_noInternetConnection">No internet connection</string>
+    <string name="drivingActivity_noLocationAvailable">Location not available</string>
     <string name="journeyDetails_globalScore">Journey score:</string>
     <string name="historyItem_score">Score:</string>
     <string name="journeyDetails_viewInsightsButton">View Insights</string>
